--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "gatsby": "^2.17.10",
     "gatsby-image": "^2.2.30",
-    "gatsby-plugin-manifest": "^2.2.26",
-    "gatsby-plugin-offline": "^3.0.18",
+    "gatsby-plugin-emotion": "^4.1.14",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-source-filesystem": "^2.1.35",
